--- a/solution.ipynb
+++ b/solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "4  2022-09-22  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "freq       35602             19712   37418         100  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,16 +281,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "# Create a vectorized input dataset\n",
+    "# Declare the TfidfVectorizer\n",
     "vectorizer = TfidfVectorizer(stop_words='english')\n",
     "\n",
+    "# Create a matrix of input word vectors\n",
     "tfidf_matrix = vectorizer.fit_transform(df['short_description']+ \" \" + df['headline'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(209527, 88200)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfidf_matrix.shape"
    ]
   },
   {
@@ -302,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,11 +334,20 @@
     "            top_n - an integer specifying the number of results to return\n",
     "    returns: a DataFrame containing the top_n results\n",
     "    '''\n",
-    "    query_vec = vectorizer.transform([query])\n",
-    "    results = np.dot(tfidf_matrix, query_vec.T)\n",
+    "    \n",
+    "    #Vectorize the query\n",
+    "    query_vec = vectorizer.transform([query])   \n",
+    "    \n",
+    "    #Calculate the cosine similarity score\n",
+    "    results = np.dot(tfidf_matrix, query_vec.T) \n",
     "    results = np.squeeze(results.toarray())\n",
+    "    \n",
+    "    #Filter the top_n results\n",
     "    top_idx = results.argsort()[-top_n:][::-1]\n",
+    "\n",
+    "    #Append the similarity score to the results\n",
     "    df['similarity_score'] = results\n",
+    "\n",
     "    return df.iloc[top_idx]\n",
     "\n",
     "\n",
@@ -346,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
